@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+plugin/plugin_python.c: Fix reference counting for Python objects.
+Andreas Kirschbaum 2004-10-15
+
 common/living.c: Fix exp functions to use the player objects expmul
    value when determining level gains, and not the skills.  Also,
    fix bug where players last hp/sp/grace gain I think was being
